--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "html-webpack-plugin": "^5.5.2",
     "webpack": "^5.86.0",
     "webpack-cli": "^5.1.4"
   },
